# kissinger

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yml  dbmanager.py  install.sh  kissinger.sqlite  main.py  messenger.py  models.py  onboarding.py  pyproject.toml
.github/workflows/: main.yml
src/: config.yml  dbmanager.py  default_config.yml  dta.py  main.py  messenger.py  models.py  onboarding.py  postman.py
src/templates/: task.html
